Changed description of jupyter notebook

--- a/Project_Judita_Huber.ipynb
+++ b/Project_Judita_Huber.ipynb
@@ -8,23 +8,48 @@
    "source": [
     "# Judi's Project\n",
     "This project is using the publicly available data from the Human Connectome Project (HCP)\n",
+    "\n",
+    "Data available here: https://db.humanconnectome.org\n",
     "Data dictionary available here: https://wiki.humanconnectome.org/display/PublicData/HCP+Data+Dictionary+Public-+500+Subject+Release?src=contextnavpagetreemode\n",
     "\n",
-    "(Correlate some cognitive performance with human brain image properties from DTI & fMRI studies , e.g memory/spatial test with HPC)\n",
-    "\n",
-    "Test whether performance differences in a spatial orientation task are explained:  \n",
+    "Test whether performance differences in a line orientation task are explained:  \n",
     "*) gender\n",
-    "*) hipocampal volume \n",
+    "*) characteristics of hippocampus (area, volume, surface) \n",
     "\n",
-    "Aims: \n",
-    "*) characterise spatial orientation performance\n",
+    "For this: \n",
+    "*) extract appropriate data and save in pandas data frame\n",
+    "*) plot distribution of spatial orientation performance\n",
+    "*) create score for left and right hippocampal area for each person\n",
+    "*) normalise hippocampal area for each person\n",
+    "*) plot all possible combinations\n",
+    "*) check assumptions\n",
+    "*) linear regression \n",
     "\n",
-    "*****\n",
-    "Aims: \n",
-    "    * Characterise HPC properties (e.g. volume/surface), correlated with verbal episodic memory & VSPLOT (for loop?)  \n",
-    "    * characterise total score verbal episodic memory for M/F\n",
-    "    * Determine if there is a relationship between HPC properties & verbal episodic memory (ie. regression + check assumptions)\n",
-    "    \n"
+    "NECESSARY:\n",
+    "\n",
+    "    load source data from a file\n",
+    "    plot at least one histogram of the data, with title and labelled axes\n",
+    "    create at least one plot of analysis results, with title and labelled axes\n",
+    "    use at least one numpy array\n",
+    "    use short but descriptive variable names in your code\n",
+    "    document your code: use markdown in your .ipynb and/or directly comment your python code with # or ''' or \"\"\"\n",
+    "\n",
+    "MINIMUM OF SIX:\n",
+    "\n",
+    "    use an if-elif-else clause\n",
+    "    use a for loop\n",
+    "    use a while loop\n",
+    "    write at least one function, include a docstring\n",
+    "    print out some results in at least one nicely formatted string, using string operator % or .format() method\n",
+    "    use at least one vectorized math operation on an array\n",
+    "    use at least one matrix operation on a 2D array\n",
+    "    create a figure with multiple axes (i.e., use plt.subplots(nrows, ncols))\n",
+    "    do a statistical test - show that the test assumptions hold for your data\n",
+    "    manipulate and analyze data in a pandas series or dataframe\n",
+    "    use an image processing algorithm\n",
+    "    use a clustering algorithm\n",
+    "    use some other non-trivial algorithm: e.g. regression, curve fitting, signal analysis…\n",
+    "    version control your code using git: create a local repository and make at least 5 commits while developing your code\n"
    ]
   },
   {
@@ -241,20 +266,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    use an if-elif-else clause\n",
-    "    use a for loop\n",
+    "    use an if-elif-else clause \n",
+    "    use a for loop X\n",
     "    use a while loop\n",
     "    write at least one function, include a docstring\n",
     "    print out some results in at least one nicely formatted string, using string operator % or .format() method\n",
-    "    use at least one vectorized math operation on an array\n",
-    "    use at least one matrix operation on a 2D array\n",
-    "    create a figure with multiple axes (i.e., use plt.subplots(nrows, ncols))\n",
-    "    do a statistical test - show that the test assumptions hold for your data\n",
-    "    manipulate and analyze data in a pandas series or dataframe\n",
+    "    use at least one vectorized math operation on an array \n",
+    "    use at least one matrix operation on a 2D array X\n",
+    "    create a figure with multiple axes (i.e., use plt.subplots(nrows, ncols)) X\n",
+    "    do a statistical test - show that the test assumptions hold for your data TO DO\n",
+    "    manipulate and analyze data in a pandas series or dataframe X\n",
     "    use an image processing algorithm\n",
     "    use a clustering algorithm\n",
-    "    use some other non-trivial algorithm: e.g. regression, curve fitting, signal analysis…\n",
-    "    version control your code using git: create a local repository and make at least 5 commits while developing your code\n"
+    "    use some other non-trivial algorithm: e.g. regression, curve fitting, signal analysis… X \n",
+    "    version control your code using git: create a local repository and make at least 5 commits while developing your code X\n"
    ]
   },
   {
