--- a/Project_Judita_Huber.ipynb
+++ b/Project_Judita_Huber.ipynb
@@ -12,9 +12,9 @@
     "Data available here: https://db.humanconnectome.org\n",
     "Data dictionary available here: https://wiki.humanconnectome.org/display/PublicData/HCP+Data+Dictionary+Public-+500+Subject+Release?src=contextnavpagetreemode\n",
     "\n",
-    "Test whether performance differences in a line orientation task are explained:  \n",
+    "Test how performance differences in a line orientation task are explained by:  \n",
     "*) gender\n",
-    "*) characteristics of hippocampus (area, volume, surface) \n",
+    "*) characteristics of hippocampus (volume) \n",
     "\n",
     "For this: \n",
     "*) extract appropriate data and save in pandas data frame\n",
@@ -22,14 +22,13 @@
     "*) create score for left and right hippocampal area for each person\n",
     "*) normalise hippocampal area for each person\n",
     "*) plot all possible combinations\n",
-    "*) check assumptions\n",
     "*) linear regression \n",
     "\n",
     "NECESSARY:\n",
     "\n",
     "    load source data from a file [X]\n",
     "    plot at least one histogram of the data, with title and labelled axes [X]\n",
-    "    create at least one plot of analysis results, with title and labelled axes\n",
+    "    create at least one plot of analysis results, with title and labelled axes [X]\n",
     "    use at least one numpy array [X]\n",
     "    use short but descriptive variable names in your code [X}\n",
     "    document your code: use markdown in your .ipynb and/or directly comment your python code with # or ''' or \"\"\" [X]\n",
@@ -43,7 +42,7 @@
     "    print out some results in at least one nicely formatted string, using string operator % or .format() method\n",
     "    use at least one vectorized math operation on an array [X]\n",
     "    use at least one matrix operation on a 2D array\n",
-    "    create a figure with multiple axes (i.e., use plt.subplots(nrows, ncols))\n",
+    "    create a figure with multiple axes (i.e., use plt.subplots(nrows, ncols)) [X]\n",
     "    do a statistical test - show that the test assumptions hold for your data \n",
     "    manipulate and analyze data in a pandas series or dataframe [X]\n",
     "    use an image processing algorithm\n",
@@ -90,10 +89,7 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": [
-    "#Group data by Gender\n",
-    "gender_grouping = HCP_data.groupby('Gender')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -103,7 +99,7 @@
    },
    "outputs": [],
    "source": [
-    "#plot at least one histogram of the data, with title and labelled axes\n",
+    "#Plotting distribution of performance in a Line Orientation task (\"VSPLOT_TC\")\n",
     "gender_hist = gender_grouping.VSPLOT_TC.hist(bins=15)\n",
     "plt.xlabel(\"Variable Short Penn Line Orientation: Total Number Correct (VSPLOT_TC)\")\n",
     "plt.ylabel(\"frequency\")\n",
@@ -119,11 +115,10 @@
    },
    "outputs": [],
    "source": [
-    "#select appropriate columns (i.e. gender, age, task performance and hippocampal & temporal lobe information)\n",
+    "#select appropriate columns (i.e. gender, age, task performance and hippocampal volume information)\n",
+    "#first create filter\n",
     "filter_col = [col for col in HCP_data.columns \n",
-    "            if col.startswith('FS_L_Parahippocampal') | \n",
-    "            col.startswith('FS_R_Parahippocampal') |\n",
-    "            col.startswith('FS_L_Hipp') | \n",
+    "            if col.startswith('FS_L_Hipp') | \n",
     "            col.startswith('FS_R_Hipp') |\n",
     "            col.startswith('Age') |\n",
     "            col.startswith('VSPLOT_TC') |\n",
@@ -137,12 +132,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "#filter data \n",
-    "HCP_data_f = HCP_data[filter_col] #use filter in data frame to select specified columns\n"
+    "#use filter to select appropriate columns in data \n",
+    "HCP_data_f = HCP_data[filter_col] #use filter in data frame to select specified columns\n",
+    "HCP_data_f.shape #check shape"
    ]
   },
   {
@@ -152,25 +148,13 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
    "source": [
-    "#filter data \n",
-    "HCP_data_f = HCP_data[filter_col] #use filter in data frame to select specified columns\n",
-    "\n",
     "#exclude empty entries (otherwise get error message later)\n",
     "HCP_data_f = HCP_data_f[~HCP_data_f.FS_L_Hippo_Vol.isnull()]\n",
     "HCP_data_f = HCP_data_f[~HCP_data_f.FS_R_Hippo_Vol.isnull()]\n",
     "HCP_data_f = HCP_data_f[~HCP_data_f.FS_SubCort_GM_Vol.isnull()]\n",
     "HCP_data_f = HCP_data_f[~HCP_data_f.VSPLOT_TC.isnull()]\n",
-    "HCP_data_f.shape #check that correct shape \n",
+    "HCP_data_f.shape #check shape as expected \n",
     "\n",
     "\n"
    ]
@@ -216,20 +200,10 @@
    },
    "outputs": [],
    "source": [
-    "#create at least one plot of analysis results, with title and labelled axes\n",
-    "sns.set(style=\"ticks\")\n",
-    "sns.pairplot(HCP_data_f,  dropna=True, hue = \"Gender\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# write own function"
+    "#Does Line Orientation performance differ between Genders? Use T-test to figure this out\n",
+    "#female_VSPLOT = HCP_data_f[HCP_data_f['Gender'] == 'F']['VSPLOT_TC']\n",
+    "#male_VSPLOT = HCP_data_f[HCP_data_f['Gender'] == 'M']['VSPLOT_TC']\n",
+    "#stats.mannwhitneyu(female_VSPLOT, male_VSPLOT)   "
    ]
   },
   {
@@ -240,12 +214,97 @@
    },
    "outputs": [],
    "source": [
+    "#mu, sigma = female_VSPLOT.mean(), female_VSPLOT.std() # blindly assume it's normal\n",
+    "#d, p = stats.kstest(female_VSPLOT, 'norm', args=(mu, sigma))\n",
+    "#p\n",
+    "\n",
+    "# p = 0.0, reject null, not normal\n",
+    "#s = stats.norm.rvs( loc=-2, scale=2, size=200)\n",
+    "#d, p = stats.kstest(s, 'norm', args=(-2, 2))\n",
+    "# p > 0.05, can't reject null, likely normal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#mu, sigma = male_VSPLOT.mean(),male_VSPLOT.std() # blindly assume it's normal\n",
+    "#d, p = stats.kstest(male_VSPLOT, 'norm', args=(mu, sigma))\n",
+    "#p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#create a figure with multiple axes\n",
+    "sns.set(style=\"ticks\")\n",
+    "all_corr = sns.pairplot(HCP_data_f,dropna=True, hue = \"Gender\", markers=['o','x'])\n",
+    "all_corr = all_corr.map_offdiag(plt.scatter,s=35,alpha=0.3)\n",
+    "plt.subplots_adjust(top=0.9)\n",
+    "all_corr.fig.suptitle('Correlations between Line Orientation & Hippocampal Volume', fontsize = 34)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Calculate the effects of gender and total hippocampal volume on performance \n",
     "from statsmodels.formula.api import ols\n",
-    "model = ols(\"VSPLOT_TC ~  FS_HPCvol_sum * Gender\", HCP_data_f).fit()\n",
+    "model = ols(\"VSPLOT_TC ~  FS_HPCvol_sum + Gender\", HCP_data_f).fit()\n",
+    "print(model.summary())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The second warning suggests multicollinearity, suggesting that the explanatory variables might not be the most appropriate. Hippocampal volume may correlate with gender as well. Thus, possibly it would be more appropriate to use normalised hippocpal volume to adjust for different head volumes. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Calculate the effects of gender and total hippocampal volume on performance \n",
+    "from statsmodels.formula.api import ols\n",
+    "model = ols(\"VSPLOT_TC ~  FS_HPCvol_sum_norm + Gender\", HCP_data_f).fit()\n",
     "print(model.summary())"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The second warning disappeared. And indeed, hippocampal volume does not have an effect after normalisation. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -253,7 +312,10 @@
    },
    "outputs": [],
    "source": [
-    "sns.pairplot(HCP_data_f, vars=['VSPLOT_TC', 'FS_HPCvol_sum_norm', 'FS_HPCvol_sum'], kind='reg', hue = 'Gender')  "
+    "# Calculate the effects of gender and total hippocampal volume on performance \n",
+    "corr_res = sns.pairplot(HCP_data_f, vars=['VSPLOT_TC', 'FS_HPCvol_sum_norm', 'FS_HPCvol_sum'], kind='reg', hue = 'Gender')  \n",
+    "plt.subplots_adjust(top=0.9)\n",
+    "corr_res = corr_res.fig.suptitle('Normalisation of hippocampus has an effect on the correlation between the Orientation test and hippocampal volume ', fontsize = 12)"
    ]
   },
   {
@@ -261,6 +323,15 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
    },
    "outputs": [],
    "source": []
