--- a/Project_Judita_Huber.ipynb
+++ b/Project_Judita_Huber.ipynb
@@ -13,8 +13,8 @@
     "Data dictionary available here: https://wiki.humanconnectome.org/display/PublicData/HCP+Data+Dictionary+Public-+500+Subject+Release?src=contextnavpagetreemode\n",
     "\n",
     "Test how performance differences in a line orientation task are explained by:  \n",
-    "*) gender\n",
-    "*) characteristics of hippocampus (volume) \n",
+    "*gender\n",
+    "*characteristics of hippocampus (volume) \n",
     "\n",
     "For this: \n",
     "*) extract appropriate data and save in pandas data frame\n",
@@ -77,8 +77,8 @@
    "outputs": [],
    "source": [
     "#Load data from source file\n",
-    "HCP_data = pd.read_csv('C:/Users/Judi/Documents/Project_HCP/unrestricted_jhuber_6_23_2017_7_25_10.csv')\n",
-    "#HCP_data = pd.read_csv('C:/Users/Judita/HCP_Data/unrestricted_jhuber_7_24_2017_4_28_55.csv')\n",
+    "# (substitute with path to the raw csv data & manipulate and analyze data in a pandas series or dataframe)\n",
+    "HCP_data = pd.read_csv('C:/Users/Judi/Documents/Project_HCP/unrestricted_jhuber_6_23_2017_7_25_10.csv') \n",
     "HCP_data.shape"
    ]
   },
@@ -86,10 +86,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#group data by gender \n",
+    "gender_grouping = HCP_data.groupby('Gender')"
+   ]
   },
   {
    "cell_type": "code",
@@ -100,6 +103,7 @@
    "outputs": [],
    "source": [
     "#Plotting distribution of performance in a Line Orientation task (\"VSPLOT_TC\")\n",
+    "#(plot at least one histogram of the data, with title and labelled axes)\n",
     "gender_hist = gender_grouping.VSPLOT_TC.hist(bins=15)\n",
     "plt.xlabel(\"Variable Short Penn Line Orientation: Total Number Correct (VSPLOT_TC)\")\n",
     "plt.ylabel(\"frequency\")\n",
@@ -117,6 +121,7 @@
    "source": [
     "#select appropriate columns (i.e. gender, age, task performance and hippocampal volume information)\n",
     "#first create filter\n",
+    "#(use a for loop)\n",
     "filter_col = [col for col in HCP_data.columns \n",
     "            if col.startswith('FS_L_Hipp') | \n",
     "            col.startswith('FS_R_Hipp') |\n",
@@ -170,6 +175,7 @@
     "#create composite scores to determine \n",
     "# *) total hippocampal volume \n",
     "# *) normalised hippocampal volume \n",
+    "# (use at least one numpy array & use at least one vectorized math operation on an array)\n",
     "\n",
     "#normalise hippocampal volume by dividing by total subcortical grey matter volume\n",
     "FS_L_Hippo_Vol_norm = np.array(HCP_data_f.FS_L_Hippo_Vol / HCP_data_f.FS_SubCort_GM_Vol) #left hippocampus\n",
@@ -200,51 +206,6 @@
    },
    "outputs": [],
    "source": [
-    "#Does Line Orientation performance differ between Genders? Use T-test to figure this out\n",
-    "#female_VSPLOT = HCP_data_f[HCP_data_f['Gender'] == 'F']['VSPLOT_TC']\n",
-    "#male_VSPLOT = HCP_data_f[HCP_data_f['Gender'] == 'M']['VSPLOT_TC']\n",
-    "#stats.mannwhitneyu(female_VSPLOT, male_VSPLOT)   "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#mu, sigma = female_VSPLOT.mean(), female_VSPLOT.std() # blindly assume it's normal\n",
-    "#d, p = stats.kstest(female_VSPLOT, 'norm', args=(mu, sigma))\n",
-    "#p\n",
-    "\n",
-    "# p = 0.0, reject null, not normal\n",
-    "#s = stats.norm.rvs( loc=-2, scale=2, size=200)\n",
-    "#d, p = stats.kstest(s, 'norm', args=(-2, 2))\n",
-    "# p > 0.05, can't reject null, likely normal"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#mu, sigma = male_VSPLOT.mean(),male_VSPLOT.std() # blindly assume it's normal\n",
-    "#d, p = stats.kstest(male_VSPLOT, 'norm', args=(mu, sigma))\n",
-    "#p"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
     "#create a figure with multiple axes\n",
     "sns.set(style=\"ticks\")\n",
     "all_corr = sns.pairplot(HCP_data_f,dropna=True, hue = \"Gender\", markers=['o','x'])\n",
@@ -252,15 +213,6 @@
     "plt.subplots_adjust(top=0.9)\n",
     "all_corr.fig.suptitle('Correlations between Line Orientation & Hippocampal Volume', fontsize = 34)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -292,6 +244,7 @@
    "outputs": [],
    "source": [
     "# Calculate the effects of gender and total hippocampal volume on performance \n",
+    "#  use some other non-trivial algorithm: e.g. regression\n",
     "from statsmodels.formula.api import ols\n",
     "model = ols(\"VSPLOT_TC ~  FS_HPCvol_sum_norm + Gender\", HCP_data_f).fit()\n",
     "print(model.summary())"
@@ -301,7 +254,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The second warning disappeared. And indeed, hippocampal volume does not have an effect after normalisation. "
+    "The second warning disappeared. And indeed, hippocampal volume does not have an effect after normalisation. So while there is a gender effect in Line Orientation task performace, this cannot be explained by volume differences in the hippocampus, "
    ]
   },
   {
@@ -312,38 +265,12 @@
    },
    "outputs": [],
    "source": [
-    "# Calculate the effects of gender and total hippocampal volume on performance \n",
+    "#Calculate the effects of gender and total hippocampal volume on performance \n",
+    "#(create at least one plot of analysis results, with title and labelled axes)\n",
     "corr_res = sns.pairplot(HCP_data_f, vars=['VSPLOT_TC', 'FS_HPCvol_sum_norm', 'FS_HPCvol_sum'], kind='reg', hue = 'Gender')  \n",
     "plt.subplots_adjust(top=0.9)\n",
-    "corr_res = corr_res.fig.suptitle('Normalisation of hippocampus has an effect on the correlation between the Orientation test and hippocampal volume ', fontsize = 12)"
+    "corr_res = corr_res.fig.suptitle('Relationship between the orientation test, gender and hippocampal volume ', fontsize = 12)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
