Added some comments & some small formatting changes

--- a/Project_Judita_Huber.ipynb
+++ b/Project_Judita_Huber.ipynb
@@ -6,19 +6,19 @@
     "collapsed": true
    },
    "source": [
-    "# Judi's Project\n",
+    "# Judi's Python Project\n",
     "This project is using the publicly available data from the Human Connectome Project (HCP)\n",
     "\n",
     "Data available here: https://db.humanconnectome.org\n",
     "Data dictionary available here: https://wiki.humanconnectome.org/display/PublicData/HCP+Data+Dictionary+Public-+500+Subject+Release?src=contextnavpagetreemode\n",
     "\n",
-    "Test how performance differences in a line orientation task are explained by:  \n",
-    "*gender\n",
-    "*characteristics of hippocampus (volume) \n",
+    "The aim of this analysis is to test how performance differences in a line orientation task is explained by:  \n",
+    "*) gender \n",
+    "*) characteristics of hippocampus (volume) \n",
     "\n",
     "For this: \n",
     "*) extract appropriate data and save in pandas data frame\n",
-    "*) plot distribution of spatial orientation performance\n",
+    "*) plot distribution of spatial orientation performance for males and females\n",
     "*) create score for left and right hippocampal area for each person\n",
     "*) normalise hippocampal area for each person\n",
     "*) plot all possible combinations\n",
@@ -112,6 +112,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### There seems to be a performance difference across genders. Could this be due to differences in hippocampal volume? "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -178,8 +185,8 @@
     "# (use at least one numpy array & use at least one vectorized math operation on an array)\n",
     "\n",
     "#normalise hippocampal volume by dividing by total subcortical grey matter volume\n",
-    "FS_L_Hippo_Vol_norm = np.array(HCP_data_f.FS_L_Hippo_Vol / HCP_data_f.FS_SubCort_GM_Vol) #left hippocampus\n",
-    "FS_R_Hippo_Vol_norm = np.array(HCP_data_f.FS_R_Hippo_Vol / HCP_data_f.FS_SubCort_GM_Vol) #right hippocampus\n",
+    "FS_L_Hippo_Vol_norm = np.array(HCP_data_f.FS_L_Hippo_Vol / HCP_data_f.FS_SubCort_GM_Vol) #left hippocampus normalised volume\n",
+    "FS_R_Hippo_Vol_norm = np.array(HCP_data_f.FS_R_Hippo_Vol / HCP_data_f.FS_SubCort_GM_Vol) #right hippocampus normalised volume\n",
     "FS_R_Hippo_Vol_norm.size\n",
     "\n",
     "#calculate total hippocampal volume\n",
@@ -188,7 +195,7 @@
     "FS_HPCvol_sum_norm = np.array(FS_HPCvol_sum / HCP_data_f.FS_SubCort_GM_Vol)\n",
     "\n",
     "#include arrays in data frame\n",
-    "HCP_data_f['FS_L_Hippo_Vol_norm'] = FS_L_Hippo_Vol_norm\n",
+    "HCP_data_f['FS_L_Hippo_Vol_norm'] = FS_L_Hippo_Vol_norm \n",
     "HCP_data_f['FS_R_Hippo_Vol_norm'] = FS_R_Hippo_Vol_norm\n",
     "HCP_data_f['FS_HPCvol_sum'] = FS_HPCvol_sum\n",
     "HCP_data_f['FS_HPCvol_sum_norm'] = HCP_data_f.FS_HPCvol_sum / HCP_data.FS_SubCort_GM_Vol \n",
@@ -222,17 +229,18 @@
    },
    "outputs": [],
    "source": [
-    "# Calculate the effects of gender and total hippocampal volume on performance \n",
+    "# Calculate the effects of gender and total hippocampal volume on performance in the line orientation task\n",
+    "# using linear regresssion \n",
     "from statsmodels.formula.api import ols\n",
-    "model = ols(\"VSPLOT_TC ~  FS_HPCvol_sum + Gender\", HCP_data_f).fit()\n",
-    "print(model.summary())\n"
+    "model1 = ols(\"VSPLOT_TC ~  FS_HPCvol_sum + Gender\", HCP_data_f).fit()  \n",
+    "print(model1.summary()) #print summary of regression modely\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The second warning suggests multicollinearity, suggesting that the explanatory variables might not be the most appropriate. Hippocampal volume may correlate with gender as well. Thus, possibly it would be more appropriate to use normalised hippocpal volume to adjust for different head volumes. "
+    "### The second warning suggests multicollinearity, suggesting that the explanatory variables might not be the most appropriate. Hippocampal volume may correlate with gender as well. Thus, possibly it would be more appropriate to use normalised hippocpal volume to adjust for different head volumes. "
    ]
   },
   {
@@ -246,15 +254,16 @@
     "# Calculate the effects of gender and total hippocampal volume on performance \n",
     "#  use some other non-trivial algorithm: e.g. regression\n",
     "from statsmodels.formula.api import ols\n",
-    "model = ols(\"VSPLOT_TC ~  FS_HPCvol_sum_norm + Gender\", HCP_data_f).fit()\n",
-    "print(model.summary())"
+    "model2 = ols(\"VSPLOT_TC ~  FS_HPCvol_sum_norm + Gender\", HCP_data_f).fit() #\n",
+    "print(model2.summary())\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The second warning disappeared. And indeed, hippocampal volume does not have an effect after normalisation. So while there is a gender effect in Line Orientation task performace, this cannot be explained by volume differences in the hippocampus, "
+    "### The second warning disappeared. And indeed, hippocampal volume does not have an effect after normalisation. So while there is a gender effect in Line Orientation task performace, this cannot be explained by volume differences in the hippocampus"
    ]
   },
   {
@@ -271,6 +280,33 @@
     "plt.subplots_adjust(top=0.9)\n",
     "corr_res = corr_res.fig.suptitle('Relationship between the orientation test, gender and hippocampal volume ', fontsize = 12)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
